--- a/test/storybook/docs/Testing/Decorators/Event/@Event.mdx
+++ b/test/storybook/docs/Testing/Decorators/Event/@Event.mdx
@@ -1,174 +1,89 @@
-import rules from './rules.json';
+import rules from './data/rules.json';
 import { Meta } from '@storybook/addon-docs/blocks';
-import data from './coverage-data.json';
-import overlay from './coverage-overlay.json';
-import React, { useMemo, useState } from 'react';
+import data from './data/components.json';
+import testCoverage from './data/test-coverage.json';
+import React from 'react';
 import RulesAtAGlance from '../_shared/RulesAtAGlance.jsx';
+import TestCasesTable from '../_shared/TestCasesTable.jsx';
+import GeneratedComponentsTable from '../_shared/GeneratedComponentsTable.jsx';
 
 <Meta title="Testing/Decorators/@Event"/>
 
 # @Event Decorator
 
-The `@Event` decorator defines a custom event that components can emit. This page documents the decorator properties, rules, generated components, grouping, and test cases.
+The `@Event` decorator defines a custom event that components can emit. This page documents the decorator properties, rules, test cases, generated components, and component grouping.
 
 ## Decorator Properties
 
-- bubbles: if true, the event bubbles.
-- cancelable: if true, the event can be canceled with `event.preventDefault()`.
-- composed: if true, the event can pass through shadow DOM boundaries.
+- **bubbles**: if true, the event bubbles up through the DOM hierarchy
+- **cancelable**: if true, the event can be canceled with `event.preventDefault()`
+- **composed**: if true, the event can pass through shadow DOM boundaries
 
-## Rules (at a glance)
-<RulesAtAGlance rules={rules} sourcePath="./rules.json" modeLabel="Event mode" />
-
-## Generated Components
-
-<div>
-  <strong>Generated Components:</strong> {data.coverage.covered} of {data.coverage.total} generated (
-  <strong>{data.coverage.percent}%</strong>)
-</div>
-
-<p style={{ marginTop: 8 }}>
-  One row per unique combination of <code>bubbles</code> × <code>cancelable</code> × <code>composed</code>.
-  If a combo fails to compile, capture it in <code>rules.json</code> and regenerate. The “Tested / Test Cases” column is populated in Phase 2.
-</p>
-
-export const GeneratedComponentsTable = () => {
-  const [expanded, setExpanded] = useState(false);
-
-  const rows = useMemo(() => {
-    const items = overlay.items || [];
-    return (data.coveredPermutations || []).map((p, i) => {
-      const [bubbles, cancelable, composed] = p.options || [];
-      const key = `${bubbles}|${cancelable}|${composed}`;
-      const oi = items.find(x => x.optionsKey === key) || {};
-      return {
-        index: i,
-        bubbles,
-        cancelable,
-        composed,
-        tested: !!oi.tested,
-        tests: oi.testedBy || [],
-      };
-    });
-  }, []);
-
-  const total = rows.length;
-
-  const renderTable = (rowsToRender) => (
-    <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
-      <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
-        <colgroup>
-          <col style={{ width: '22%' }} />
-          <col style={{ width: '22%' }} />
-          <col style={{ width: '22%' }} />
-          <col style={{ width: '12%' }} />
-          <col style={{ width: '22%' }} />
-        </colgroup>
-        <thead>
-          <tr>
-            <th>bubbles</th>
-            <th>cancelable</th>
-            <th>composed</th>
-            <th style={{ textAlign: 'center' }}>Tested</th>
-            <th>Test Cases</th>
-          </tr>
-        </thead>
-        <tbody>
-          {rowsToRender.map((r) => (
-            <tr key={r.index} style={{ background: r.tested ? '#fbfffb' : '#fff' }}>
-              <td>{r.bubbles}</td>
-              <td>{r.cancelable}</td>
-              <td>{r.composed}</td>
-              <td style={{ textAlign: 'center' }}>
-                {r.tested ? <span style={{ color: 'green' }}>✔</span> : <span style={{ color: '#999' }}>—</span>}
-              </td>
-              <td>
-                {r.tests.length ? (
-                  <ul style={{ margin: 0, paddingLeft: 16 }}>
-                    {r.tests.map((t, k) => (
-                      <li key={k}>{t}</li>
-                    ))}
-                  </ul>
-                ) : (
-                  <em>—</em>
-                )}
-              </td>
-            </tr>
-          ))}
-        </tbody>
-      </table>
-    </div>
-  );
-
-  if (!expanded) {
-    const preview = rows.slice(0, 3);
-    return (
-      <div style={{ position: 'relative' }}>
-        {renderTable(preview)}
-        {total > 3 && (
-          <>
-            <div
-              style={{
-                position: 'absolute',
-                left: 0,
-                right: 0,
-                bottom: 40,
-                height: 48,
-                background: 'linear-gradient(180deg, rgba(255,255,255,0) 0%, #fff 90%)',
-                pointerEvents: 'none',
-              }}
-            />
-            <div style={{ display: 'flex', justifyContent: 'center', marginTop: -8 }}>
-              <button
-                onClick={() => setExpanded(true)}
-                style={{
-                  padding: '6px 12px',
-                  border: '1px solid #ddd',
-                  background: '#f8f8f8',
-                  borderRadius: 4,
-                  cursor: 'pointer',
-                  fontSize: 12,
-                }}
-                aria-label={`Show all ${total} components`}
-              >
-                Show all {total} components
-              </button>
-            </div>
-          </>
-        )}
-      </div>
-    );
-  }
-
-  return (
-    <div>
-      <div style={{ display: 'flex', justifyContent: 'flex-end', marginBottom: 8 }}>
-        <button
-          onClick={() => setExpanded(false)}
-          style={{
-            padding: '6px 12px',
-            border: '1px solid #ddd',
-            background: '#f8f8f8',
-            borderRadius: 4,
-            cursor: 'pointer',
-            fontSize: 12,
-          }}
-          aria-label="Collapse components table"
-        >
-          Collapse table
-        </button>
-      </div>
-      {renderTable(rows)}
-    </div>
-  );
-};
-
-<GeneratedComponentsTable />
-
-## Component Grouping
-
-Components are grouped by `bubbles` mode under `test/wdio/event/matrix/<bubbles|no-bubbles>/`.
+## Rules
+<RulesAtAGlance rules={rules} sourcePath="./data/rules.json" modeLabel="Event mode" />
 
 ## Test Cases
 
-- Phase 2 placeholder: tests will be propagated across generated components and recorded in `coverage-overlay.json`.
+Note: Test cases are high-level scenarios, not a 1-to-1 mapping to tests (it() blocks). A single WDIO test can exercise many generated components, and a component can participate in multiple tests. All @Event tests reside under `test/wdio/event`.
+
+export const EventTestCasesTable = () => {
+  // Get items from test coverage data
+  const items = testCoverage.items || [];
+  
+  // Group by case ID (1 = bubbling, 2 = non-bubbling)
+  const bubblingItems = items.filter(item => item.caseIds && item.caseIds.includes(1));
+  const nonBubblingItems = items.filter(item => item.caseIds && item.caseIds.includes(2));
+
+  const testCaseRows = [
+    {
+      id: 1,
+      desc: "Bubbling events – Tests event emission and handling for events that bubble up the DOM hierarchy",
+      types: "4 components with bubbles=true (all cancelable/composed combinations)",
+      implemented: bubblingItems.some(item => item.tested),
+      tested: bubblingItems.filter(item => item.tested).length,
+      total: bubblingItems.length
+    },
+    {
+      id: 2,
+      desc: "Non-bubbling events – Tests event emission and handling for events isolated to their target element", 
+      types: "4 components with bubbles=false (all cancelable/composed combinations)",
+      implemented: nonBubblingItems.some(item => item.tested),
+      tested: nonBubblingItems.filter(item => item.tested).length,
+      total: nonBubblingItems.length
+    }
+  ];
+  
+  return <TestCasesTable rows={testCaseRows} />;
+};
+
+<EventTestCasesTable />
+
+## Generated Components
+
+export const EventGeneratedComponentsTable = () => {
+  // Use the items from test coverage which has the caseIds information
+  const rows = (testCoverage.items || []).map((item, index) => {
+    return {
+      index: index,
+      bubbles: item.options?.bubbles === '✓' ? 'true' : 'false',
+      cancelable: item.options?.cancelable === '✓' ? 'true' : 'false', 
+      composed: item.options?.composed === '✓' ? 'true' : 'false',
+      caseNumbers: Array.isArray(item.caseIds) ? [...item.caseIds].sort((a, b) => a - b) : []
+    };
+  });
+  
+  const columns = [
+    { key: 'bubbles', label: 'Bubbles', width: '25%' },
+    { key: 'cancelable', label: 'Cancelable', width: '25%' },
+    { key: 'composed', label: 'Composed', width: '25%' },
+    { key: 'testedBy', label: 'Tested By', width: '25%' },
+  ];
+  
+  return <GeneratedComponentsTable rows={rows} columns={columns} previewCount={3} />;
+};
+
+<EventGeneratedComponentsTable />
+
+## Component Grouping
+
+Components are grouped by **bubbles** mode under `/test/wdio/event/components/<bubbles|no-bubbles>/`. This organization reflects whether the event bubbles up through the DOM hierarchy or remains isolated to its target element.
