Update docs with latest workflow steps

--- a/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
@@ -73,23 +73,104 @@ The final results are typically written to a `.json` file (e.g., `prop-coverage-
 
 ## Real-World Example: The `@Prop` Decorator
 
-Our first application of this strategy to the `@Prop` decorator provides a perfect case study of the iterative process in action and highlights the exponential cost of comprehensive testing. For a concrete example of the permutation matrix in practice, see [@Prop Matrix: Covered Permutations](?path=/docs/testing-decorators-prop--docs#covered-permutations).
+Our application of this strategy to the `@Prop` decorator demonstrates the complete **3-step testing loop** in action and showcases the exponential value of systematic testing. For concrete examples, see [@Prop Matrix: Covered Permutations](?path=/docs/testing-decorators-prop--docs#covered-permutations).
 
-1.  **Initial Coverage Push**: We began by identifying the primary permutations for `@Prop`, focusing on its `type` (e.g., `string`, `number`, `boolean`) and the `reflect` option. The AI assistant generated a suite of isolated component tests in `test/wdio/prop-reflect/` to cover these cases. After this initial push, our coverage script reported **100% coverage** for the known permutations.
-2.  **Discovering a Blind Spot**: Upon review, we realized we had completely overlooked the `mutable` property. It was not being tracked by our coverage script, giving us a false sense of security.
-3.  **The Cost of a New Permutation**: We updated the `prop-coverage.js` script to recognize the `mutable` property. The impact was immediate and dramatic. The total number of testable permutations doubled, and our coverage plummeted from **100% to 62.5%**. This demonstrated a critical lesson: each new property added to a feature doesn't just add a few more tests; it can exponentially increase the testing matrix.
-4.  **The Next Iteration**: We are now back at the beginning of the testing loop, but we are not starting from scratch. With a more accurate permutation matrix, we will now use the same strategy—and the lessons learned from the first iteration—to generate the tests required to cover the new `mutable` permutations and bring our coverage back to 100%.
+### The Complete Loop Success Story
 
-This experience validates our strategy. The loop is designed to be self-correcting. It allows us to uncover our own blind spots, systematically address them, and continuously improve the robustness of our test suite.
+**Step 1: Rules Discovery** 🔍
+- **AI Matrix Generation**: Started with broad matrix: 6 types × 2 reflect × 2 mutable = 24 permutations
+- **Initial Component Generation**: Generated all 24 components (including invalid ones)
+- **Compiler-Driven Discovery**: Build attempts revealed constraint violations:
+  - Complex types (Array, Object, Set) cannot use `reflect: true`
+  - Compiler errors became the source of truth for valid combinations
+- **Rules Encoding**: Created `rules.json` capturing discovered constraints
+- **Matrix Refinement**: Updated matrix eliminated invalid permutations, kept 24 valid ones
 
-# Coverage Matrix: Shared Context for AI and Humans
+**Step 2: Generate & Build** 🏗️
+- **Clean Generation**: Generated 24 components from compiler-validated matrix
+- **Zero-Error Build**: All components compiled successfully
+- **Systematic Organization**: Components organized by type directories with consistent naming
 
-This documentation is the source of truth for the coverage matrix workflow. It is designed to be concise and clear for both AI and human readers, enabling iterative evaluation, generation, and verification of coverage.
+**Step 3: Test & Verify** ✅
+- **Structured Testing**: Implemented 5 test cases covering all behavioral scenarios
+- **Complete Coverage**: Achieved 100% coverage across all **valid** permutations
+- **Runtime Validation**: Verified functionality through WebDriver I/O tests
 
-- **Generation:** See `generation.mdx` for how to enumerate permutations and generate missing components/tests.
-- **Verification:** See `verification.mdx` for how to confirm matrix accuracy and automate reliability checks.
+### Key Learnings from the Rules Discovery Process
 
-The process is inherently iterative, adapting as new decorator options and features are added. Testing details (component and e2e) are covered in separate documentation files.
+1. **Compiler as Oracle**: Using build failures to discover valid decorator combinations is more reliable than manual specification
+2. **Broad-to-Narrow Approach**: Starting with all possible permutations and eliminating invalid ones ensures comprehensive coverage
+3. **Constraint Documentation**: `rules.json` becomes a living document of framework constraints discovered through systematic exploration
+4. **Iterative Refinement**: The discovery process naturally handles framework evolution - new constraints are discovered and encoded automatically
+5. **Community Scalability**: Once rules are discovered, community contributions follow validated patterns
+
+**The Revolutionary Insight**: Instead of trying to predict valid decorator combinations, let the compiler teach us what's actually possible!
+
+This validates our **Rules Discovery strategy** as a scalable, **compiler-driven** approach to maintaining comprehensive test coverage as the framework evolves.
+
+# Coverage Matrix: Community-Driven Testing Documentation
+
+This documentation serves as the source of truth for our crowdsourceable testing ecosystem. It enables both AI and human contributors to systematically identify gaps, implement tests, and verify coverage.
+
+## Test Case Documentation System
+
+Our structured approach creates comprehensive test case documentation automatically:
+
+### Coverage Reports Structure
+```json
+{
+  "coverage": {
+    "covered": 24,
+    "total": 24, 
+    "percent": "100.00"
+  },
+  "items": [
+    {
+      "group": "string",
+      "options": {
+        "type": "string",
+        "reflect": "✓",
+        "mutable": "✓"
+      },
+      "tested": true,
+      "caseIds": [1, 3, 5]
+    }
+  ]
+}
+```
+
+### Test Case Mapping
+- **Case #1**: Primitive runtime coverage
+- **Case #2**: Complex static render
+- **Case #3**: reflect=true behaviors
+- **Case #4**: reflect=false behaviors  
+- **Case #5**: mutable=true behaviors
+
+## Community Contribution Opportunities
+
+### Gap Identification
+- **Missing permutations**: Automatically identified in coverage reports
+- **Untested scenarios**: `"tested": false` entries need implementation
+- **New test cases**: Expand beyond current 5 test case types
+
+### Contribution Process
+1. **Review coverage reports** in `/test/storybook/docs/Testing/Decorators/{decorator}/data/`
+2. **Follow the 3-step loop**: Rules → Generate → Test
+3. **Implement using established patterns** and naming conventions
+4. **Submit pull requests** with documentation updates
+
+### Expandable Test Scenarios
+Beyond current coverage, community can add:
+- **Edge cases**: null/undefined handling, boundary conditions
+- **Performance scenarios**: large datasets, memory usage
+- **Integration patterns**: component composition, complex interactions
+- **Accessibility**: screen reader support, keyboard navigation
+- **Browser compatibility**: specific behaviors, polyfills
+
+- **Generation:** See `generation.mdx` for systematic component creation
+- **Verification:** See `verification.mdx` for coverage validation and quality assurance
+
+This process is inherently collaborative, enabling community-driven expansion as new decorator options and real-world use cases emerge.
 
 ## Key Learnings and Implications
 
